# SpotFSM

./: .gitignore  CMakeLists.txt  Makefile  README.md  conftest.py  requirements.txt  walkthrough.md
config/: k8s_workload_health_bridge.example.yaml  live_params.json  llm_routing.example.yaml  mean_reversion_strategy.yaml  portfolio_policy.yaml  telemetry_bridge.example.yaml  telemetry_policy.example.yaml
docs/: transition_plan.md
scripts/: __init__.py
scripts/llm_probe/: __init__.py  policy.py  poller.py  replay_routing.py  types.py
scripts/llm_routing/: __init__.py  policy.py  replay.py  types.py
scripts/research/: __init__.py
scripts/research/regime_manifold/: __init__.py  codec_analytics.py  decoder.py  encoder.py  runtime.py  types.py
scripts/spotfsm/: __init__.py  datasets.py  evaluate_phase3.sh  operator.py  policy.py  replay.py  types.py
scripts/telemetry_bridge/: __init__.py  cli.py  connectors.py  service.py  types.py
scripts/telemetry_replay/: __init__.py  analysis.py
src/core/: CMakeLists.txt  byte_stream_manifold.cpp  manifold_builder.cpp  structural_entropy.cpp
tests/: test_llm_probe.py  test_llm_routing.py  test_spotfsm_phase3.py  test_telemetry_bridge.py  test_telemetry_replay.py
